--- a/templates/success.html
+++ b/templates/success.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
-{{ user }} have successfully check in at {{ time }}
+{{ user }} have successfully check in at {{ time|local_time }}
 <a href="{{ url_for('check_time') }}">Go Back</a>
 {% endblock %}
