--- a/templates/success.html
+++ b/templates/success.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-{{ user }} have successfully check at {{ time|local_time }}
+{{ user }} have successfully check at {{ time }}
+    <p id="hours"> </p>
 <a href="{{ url_for('check_time') }}">Go Back</a>
+    <script>
+    const d = new Date()
+    let diff = d.getTimezoneOffset();
+    document.getElementById("hours").innerHTML = Date(d-diff*60000);
+    </script>
 {% endblock %}
