--- a/templates/hour_wages.html
+++ b/templates/hour_wages.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
  <h3> Employee name: {{ name }} </h3>
- {% set array1=[] %}
+{# {% set array1=[] %}#}
     <a href="{{ url_for('check_time') }}">Go back</a>
     <table class="table">
   <thead>
@@ -9,21 +9,17 @@
       <th scope="col">Date</th>
       <th scope="col">Clock in</th>
       <th scope="col">Clock out</th>
-      <th scope="col">Total</th>
     </tr>
   </thead>
   <tbody>
     {% for data in datas %}
-        {% set total = ((data['clock_out']['number_format']|float)-(data['clock_in']['number_format']|float))*24 %}
     <tr>
-      <th scope="row">{{ data['Date'] }}</th>
-      <td>{{ data['clock_in']['hour'] }}</td>
-      <td>{{ data['clock_out']['hour'] }}</td>
-      <td>{{'%0.2f' % total|float}}</td>
+      <th scope="row">{{ (data['clock_in']['hour_UTC']-offset)|date_convert }}</th>
+      <td>{{ (data['clock_in']['hour_UTC']-offset)|hour_convert }}</td>
+      <td>{{ (data['clock_out']['hour_UTC']-offset)|hour_convert }}</td>
     </tr>
-        {% if array1.append(total) %}{% endif %}
+{#        {% if array1.append(total) %}{% endif %}#}
     {% endfor %}
   </tbody>
 </table>
-    <h4>Total hour:{{array1|total_hours_calc}}</h4>
 {% endblock %}
