--- a/templates/success.html
+++ b/templates/success.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
-    <p id="hours">{{ user }} has successfully check at {{ time - offset }}'</p>
+    <p id="hours">{{ user }} has successfully check at {{ (time - offset)|date_convert }}: {{(time - offset)|hour_convert  }}</p>
 <a href="{{ url_for('check_time') }}">Go Back</a>
 {% endblock %}
